# employees-tree

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/: alembic.ini  config.py  main.py  models.py
src/database/: employees.py
src/handlers/: employees.py  index.py
src/migrations/: env.py
src/migrations/versions/: 2022091754_add_base_employee_table_25ade4ac53d0.py
src/static/: index.html  index.js
static/: index.css  index.html  index.js
