[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["dmytro_nevezhyn <dmytro.nevezyn@magnise.com.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
sqlmodel = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
